2006-10-19  Richard Sandiford  <richard@codesourcery.com>

	* elfxx-mips.c (sort_dynamic_relocs): Sort relocations against the
	same symbol by increasing r_offset.
	(sort_dynamic_relocs_64): Likewise.  Fix comparisons between very
	large and very small symbol indexes.

2006-10-19  Richard Sandiford  <richard@codesourcery.com>

	* elfxx-mips.c (_bfd_mips_elf_size_dynamic_sections): Add DT_DEBUG
	and DT_MIPS_RLD_MAP tags for position-independent executables.
	Do not add DT_DEBUG to shared libraries for any MIPS target.

2006-10-18  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/3290
	* elflink.c (elf_link_add_object_symbols): Hide definitions in
	debug sections.

2006-10-19  Alan Modra  <amodra@bigpond.net.au>

	* elf32-arm.c (bfd_elf32_arm_allocate_interworking_sect): Check,
	don't set, glue section size.
	(record_arm_to_thumb_glue): Set glue section size here.
	(record_thumb_to_arm_glue): Likewise.
	(bfd_elf32_arm_add_glue_sections_to_bfd): Formatting.
	(bfd_elf32_arm_process_before_allocation): Ignore exluded sections.

2006-10-18  Roy Marples  <uberlord@gentoo.org>

	* elf64-sparc.c: Add FreeBSD support.
	(elf64_sparc_fbsd_post_process_headers): New function.
	* targets.c (_bfd_target_vector): Add bfd_elf64_sparc_freebsd_vec.
	* config.bfd (sparc64-*-freebsd*): Set targ_defvec to bfd_elf64_sparc_freebsd_vec.
	* configure.in: Add entry for bfd_elf64_sparc_freebsd_vec.
	* configure: Regenerate.

2006-10-17  Mark Shinwell  <shinwell@codesourcery.com>

	* elf32-arm.c (elf32_arm_final_link_relocate): Add support for
	R_ARM_MOVW_BREL_NC, R_ARM_MOVW_BREL, R_ARM_MOVT_BREL,
	R_ARM_THM_MOVW_BREL_NC, R_ARM_THM_MOVW_BREL and
	R_ARM_THM_MOVT_BREL relocations.

2006-10-17  Mark Shinwell  <shinwell@codesourcery.com>

        * elf32-arm.c (elf32_arm_howto_table_1): Change offset for
        R_THM_CALL to 25 and remove FIXME comment.
        (using_thumb2): New function.
        (elf32_arm_final_link_relocate): Cope with Thumb-2 BL encoding.
