@@ -1,3 +1,12 @@
+2006-10-19  Mei Ligang  <ligang@sunnorth.com.cn>
+
+	* elf32-score.c (score_elf_rel_dyn_section): Replace
+	bfd_make_section with bfd_make_section_with_flags.
+	(_bfd_score_elf_create_dynamic_sections): Ditto.
+	(score_elf_create_got_section): Ditto.
+	(score_elf_final_link_relocate): Delete referrence to
+	EF_SCORE_HASENTRY.
+
 2006-10-19  Richard Sandiford  <richard@codesourcery.com>
 
 	* elfxx-mips.c (sort_dynamic_relocs): Sort relocations against the
